Fix post menu button causing horizontal scrollbar with some chrome version

--- a/Awful.apk/src/main/assets/css/general.css
+++ b/Awful.apk/src/main/assets/css/general.css
@@ -52,7 +52,7 @@
     display: inline-block;
     -webkit-user-select: none;
     user-select: none;
-    margin-left: -19px;
+    margin-left: -20px;
     margin-top: -10px;
     padding: 10px;
 }
